--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -397,5 +397,21 @@
     "emailAddress": "Email Address",
     "statusInvited": "invited",
     "statusAccepted": "Accepted"
+  },
+  "formProfile": {
+    "createTitle": "Create {{type}} Profile",
+    "upcoming": "Upcoming Baby",
+    "newborn": "Newborn",
+    "congratulations": "Congratulations!",
+    "pregnantMessage": "You are {{weeks}} week{{weeks_plural}} {{daysText}} pregnant! 💕",
+    "andDays": "and {{count}} day{{count_plural}}",
+    "lastPeriodSource": "Based on your last period date",
+    "dueDateSource": "Estimated from your due date",
+    "lastPeriodPlaceholder": "Last Period Date",
+    "dueDatePlaceholder": "Due Date",
+    "saveProfile": "Save Profile",
+    "validation": {
+      "dueDateRequired": "Due date is required"
+    }
   }
 }
