--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -372,6 +372,22 @@
     "statusInvited": "inbjuden",
     "statusAccepted": "Accepterad"
   },
+  "formProfile": {
+    "createTitle": "Skapa {{type}} profil",
+    "upcoming": "Väntat barn",
+    "newborn": "Nyfödd",
+    "congratulations": "Grattis!",
+    "pregnantMessage": "Du är gravid i {{weeks}} vecka{{weeks_plural}} {{daysText}}! 💕",
+    "andDays": "och {{count}} dag{{count_plural}}",
+    "lastPeriodSource": "Baserat på din senaste mens",
+    "dueDateSource": "Beräknat från ditt BF-datum",
+    "lastPeriodPlaceholder": "Senaste mens",
+    "dueDatePlaceholder": "BF-datum",
+    "saveProfile": "Spara profil",
+    "validation": {
+      "dueDateRequired": "BF-datum krävs"
+    }
+  },
   "features": {
     "secure": {
       "title": "Säker & Privat",
